testsuite/tests/polykinds/T16247a.stderr

T16247a.hs:21:21: error:
    • These kind and type variables: p k
      are out of dependency order. Perhaps try this ordering:
        k (p :: k)
    • In a compiler-generated top-level kind signature for ‘From1U1Sym0’:
        forall p k. (U1 :: k -> Type) p ~> Rep1 (U1 :: k -> Type) p
